--- a/Webinar03/links.html
+++ b/Webinar03/links.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <a href="http://google.com" target="_self">Go To Google</a>
+        <a href="http://google.com" target="_blank">Go To Google</a>
         <br>
         <a href="mailto:a@cb.lk"> Mail Arnav Bhaiya</a>
         <br>
