--- a/Webinar04/basiccss/basiccss.html
+++ b/Webinar04/basiccss/basiccss.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="basiccss.css">
 </head>
 <body>
     <p class="osmpara" id="p1">This is a para</p>
