--- a/Webinar06/flexbox/index.html
+++ b/Webinar06/flexbox/index.html
@@ -15,5 +15,10 @@
         <div class="item" id="item14">d</div>
         <div class="item" id="item15">e</div>
     </div>
+    <br>
+    <img src="http://i.imgur.com/2sY5JFr.jpg">
+    <b>There is no way in CSS to directly 
+        center align anything vertically
+    </b>
 </body>
 </html>
